# langchain_tutorial

./: .env.smaple  README.md  pyproject.toml
notebooks/: build_a_rag_app_part1.ipynb  build_a_rag_app_part2.ipynb  evaluate_a_chatbot.ipynb
src/langsmitsh_tutorial/: __init__.py
